--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -61,7 +64,7 @@
                 </div>
             </div>
             <div class="video__video">
-                <video width="1200" height="670" controls>
+                <video class="videomp4" width="1200" height="670" controls>
                     <source src="video/video.mp4" type="video/mp4">
                     Your browser does not support HTML video.
                 </video>
@@ -164,9 +167,9 @@
         <div class="footer__nav">
             <nav class="footer__nav__nav">
                 <ul class="footer__nav__links">
-                    <li class="footer__nav__list"><a href="#">Support</a></li>
-                    <li class="footer__nav__list"><a href="#">Policy</a></li>
-                    <li class="footer__nav__list"><a href="#">Conditions</a></li>
+                    <li class="footer__nav__list"><a href="#" class="footer__nav__list">Support</a></li>
+                    <li class="footer__nav__list"><a href="#" class="footer__nav__list">Privacy Policy</a></li>
+                    <li class="footer__nav__list"><a href="#" class="footer__nav__list">Terms and Conditions</a></li>
                
                 </ul>
             </nav>
